Updated website and added feedback page

--- a/i4.html
+++ b/i4.html
@@ -42,7 +42,7 @@
             <p> The i4 M50 has a range of upto 590km per charge</p>
             <br>
             <p>to view fully the information about this model of car, visit the official BMW
-            website by clicking the link below</p>
+            website 
             <a href="https://www.bmw.co.uk/en/all-models/bmw-i/i4/i4-gran-coupe-2024-g26bev.html#technical-data" target="_blank">Visit Official Website To view
             <br>Full Specifications</a>
             </a>
