--- a/models.html
+++ b/models.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="models.html">Models</a></li>
                 <li><a href="electric.html">Electric</a></li>
-                <li><a href="testdrive.html">testdrive</a></li>
+                <li><a href="testdrive.html">Test Drive</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
