--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     </head>
 <body>
     <header>
+        <a href ="index.html">
+         <img src="Picture/1686386597bmw-logo-png.png" alt="BMW Logo" class="logo">
+        </a>
         <h1>BMW</h1>
         <nav>
             <ul>
